# ledger-network-icons

./: .pre-commit-config.yaml  CODEOWNERS  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
icon_scripts/icon_to_nbgl/: icon_to_nbgl.py
icon_scripts/resize/: resize_icon.sh
icon_scripts/validate/: validate_icons.py
scripts/validate/: validate_icons.py
